Arreglos del primer rechazo suave

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				</div>
 			</div>
 			<!-- Nav -->
-			<div class="col-xs-12 col-md-10 col-md-offset-2">
+			<div class="col-xs-12 col-md-10">
 				<nav class="navbar ">
-  					<div class="container-fluid">
+  					<div class="container">
 		    			<!-- Brand and toggle get grouped for better mobile display -->
 					    <div class="navbar-header">
 					      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -51,12 +51,15 @@
 			<!-- /Nav -->
 			<!-- Presentation -->
 			<div class="col-xs-12 col-md-10 col-md-offset-1">
-				<div class="presentation">
-					<h1><span>AppMore</span>, the app that everyone is using</h1>
-					<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
-					<a href="#" class="my__button">Learn More</a>
+				<div class="flexv">
+					<div class="presentation">
+						<h1><span>AppMore</span>, the app that everyone is using</h1>
+						<p>The ideal features to meet the need you have, with a clean and simple interface, you can enjoy many features with the free version or pay the premium version</p>
+						<a href="#" class="my__button">Learn More</a>
+				    </div>
 				</div>
 			</div>
+			
 			<!-- /Presentation -->
 		</div>
 	</div>
@@ -79,17 +82,17 @@
 			</div>
 			<div class="col-xs-12 col-md-6">
 				<div class="row">
-					<div class="col-xs-6 col-md-6 nopadding">
+					<div class="col-xs-6 col-md-6 ">
 						<figure>
-							<img src="img/aboutleft.png" alt="aboutleft">
+							<img src="img/aboutleft.jpg" alt="aboutleft">
 						</figure>
 					</div>
-					<div class="col-xs-6 col-md-6 nopadding">
+					<div class="col-xs-6 col-md-6 ">
 						<figure>
-							<img src="img/aboutright.png" alt="aboutleft">
+							<img src="img/aboutright.jpg" alt="aboutleft">
 						</figure>
 					</div>
-					<div class="col-xs-12 col-md-12 nopadding">
+					<div class="col-xs-12 col-md-12 ">
 						<video class="video" poster="img/video.png">
 						  <source src="img/Workaholic.webm" type="video/webm">
 						  Your browser does not support the video tag.
@@ -129,7 +132,7 @@
 					</div>
 					<!-- Slide Item -->
 					<div class="features__slide">
-						<div class="features__slide__item">
+						<div class="features__slide__item" data-screen="1">
 							<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone1.png" alt="iphone">
@@ -144,15 +147,15 @@
 									<p>If you are bored of brawling with thieves and want to achieve something there is a rare blue flower that grows on the eastern slopes. Pick one of these flowers. If you can carry it to the top of the mountain, you may find what you were looking for in the first place. </p>
 									<ul>
 										<li>That's a lovely lovely voice!</li>
-										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
-										<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder.</li>
+										<li>You have learn to bury your guilt with anger. I will teach you to confront it.</li>
 										<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
 									</ul>
 						  			<a href="#" class="my__button">Get Started</a>					  			
 					  		</div>	
 						</div>
 						<!-- Slide Item -->
-						<div class="features__slide__item">
+						<div class="features__slide__item" data-screen="2">
 							<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone2.png" alt="iphone">
@@ -170,7 +173,7 @@
 					  		</div>	
 						</div>
 						<!-- Slide Item -->
-					  	<div class="features__slide__item">
+					  	<div class="features__slide__item" data-screen="3">
 					  		<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone3.png" alt="iphone">
@@ -186,7 +189,7 @@
 					  		</div>					  		
 					  	</div>
 					  	<!-- Slide Item -->
-					  	<div class="features__slide__item">
+					  	<div class="features__slide__item" data-screen="4">
 					  		<div class="col-md-5 col-md-offset-0 col-xs-8 col-xs-offset-2">
 					  			<figure>
 					  				<img src="img/iphone4.png" alt="phone">
@@ -199,8 +202,8 @@
 									<blockquote class="hidden-xs">I'll be standing where l belong. Between you and the peopIe of Gotham. The city needs Bruce Wayne, your resources, your knowledge. It doesn't need your body or your life. That time is past.</blockquote>
 									<ul>
 										<li>That's a lovely lovely voice!</li>
-										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder and gasoline.</li>
-										<li>You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth</li>
+										<li>You see, I'm a guy of simple taste. I enjoy dynamite and gunpowder.</li>
+										<li>You have learn to bury your guilt with anger. I will teach you to confront.</li>
 										<li>And as for the television's so-called plan, Batman has no jurisdiction.</li>
 									</ul>
 						  			<a href="#" class="my__button">Get Started</a>
@@ -274,30 +277,32 @@
 			<div class="col-xs-12 col-md-7">
 				<!-- Pricing Right -->
 				<div class="pricing--right">
-					<div class="col-xs-12 col-md-6">
-						<div class="pricing__table">
-							<h2 class="color__p">Free</h2>
-							<h3 class="color__p"><sub>$</sub>0</h3>
-							<ul>
-								<li><span>&#10003;</span>100 MB Disk Space</li>
-								<li><span>&#10003;</span>1 Subdomain</li>
-								<li><span>&#10003;</span>2 Email Accounts</li>
-								<li><span>&#10003;</span>2 GB Bandwidth</li>
-							</ul>
-							<a href="#" class="my__button">Get Started</a>
+					<div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="pricing__table">
+								<h2 class="color__p">Free</h2>
+								<h3 class="color__p"><sub>$</sub>0</h3>
+								<ul>
+									<li><span>&#10003;</span>100 MB Disk Space</li>
+									<li><span>&#10003;</span>1 Subdomain</li>
+									<li><span>&#10003;</span>2 Email Accounts</li>
+									<li><span>&#10003;</span>2 GB Bandwidth</li>
+								</ul>
+								<a href="#" class="my__button">Get Started</a>
+							</div>
 						</div>
-					</div>
-					<div class="col-xs-12 col-md-6 ">
-						<div class="pricing__table">
-							<h2>Premium</h2>
-							<h3><sub>$</sub>99</h3>
-							<ul>
-								<li><span>&#10003;</span>4 GB Disk Space</li>
-								<li><span>&#10003;</span>5 Subdomain</li>
-								<li><span>&#10003;</span>10 Email Accounts</li>
-								<li><span>&#10003;</span>20 GB Bandwidth</li>
-							</ul>
-							<a href="#" class="my__button">Get Started</a>
+						<div class="col-xs-12 col-md-6 ">
+							<div class="pricing__table">
+								<h2>Premium</h2>
+								<h3><sub>$</sub>99</h3>
+								<ul>
+									<li><span>&#10003;</span>4 GB Disk Space</li>
+									<li><span>&#10003;</span>5 Subdomain</li>
+									<li><span>&#10003;</span>10 Email Accounts</li>
+									<li><span>&#10003;</span>20 GB Bandwidth</li>
+								</ul>
+								<a href="#" class="my__button">Get Started</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -322,7 +327,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="1">
 								<figure class="bgcolor__p">
-									<img src="img/members/member1.png" alt="member">
+									<img src="img/members/member1.jpg" alt="member">
 									<figcaption>
 										<h3>Jose Mendez</h3>
 										<h4 class="bgcolor__p">CEO</h4>
@@ -333,7 +338,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="2">
 								<figure class="bgcolor__p">
-									<img src="img/members/member2.png" alt="member">
+									<img src="img/members/member2.jpg" alt="member">
 									<figcaption>
 										<h3>Maria Toth</h3>
 										<h4 class="bgcolor__p">Marketing Digital</h4>
@@ -344,7 +349,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="3">
 								<figure class="bgcolor__p">
-									<img src="img/members/member3.png" alt="member">
+									<img src="img/members/member3.jpg" alt="member">
 									<figcaption>
 										<h3>Michael Townsey</h3>
 										<h4 class="bgcolor__p">Backend Senior</h4>
@@ -355,7 +360,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="4">
 								<figure class="bgcolor__p">
-									<img src="img/members/member4.png" alt="member">
+									<img src="img/members/member4.jpg" alt="member">
 									<figcaption>
 										<h3>Trevor Philips</h3>
 										<h4 class="bgcolor__p">Backend Senior</h4>
@@ -366,7 +371,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="5">
 								<figure class="bgcolor__p">
-									<img src="img/members/member6.png" alt="member">
+									<img src="img/members/member5.jpg" alt="member">
 									<figcaption>
 										<h3>Lisa Mons</h3>
 										<h4 class="bgcolor__p">Ui/Ux</h4>
@@ -377,7 +382,7 @@
 						<div class="col-xs-6 col-xs-offset-0 col-md-6 col-md-offset-0">
 							<div class="team__member" data-member="6">
 								<figure class="bgcolor__p">
-									<img src="img/members/member5.png" alt="member">
+									<img src="img/members/member6.jpg" alt="member">
 									<figcaption>
 										<h3>Tony Stark</h3>
 										<h4 class="bgcolor__p">Fronted-Developer</h4>
@@ -396,7 +401,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member1full.png" alt="member">
+									<img src="img/members/member1full.jpg" alt="member">
 									<figcaption>
 										<h3>Jose Mendez</h3>
 										<a href="#">Josem@gmail.com</a>
@@ -420,7 +425,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member2full.png" alt="member">
+									<img src="img/members/member2full.jpg" alt="member">
 									<figcaption>
 										<h3>Maria Toth</h3>
 										<a href="#">mariiita@gmail.com</a>
@@ -444,7 +449,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member3full.png" alt="member">
+									<img src="img/members/member3full.jpg" alt="member">
 									<figcaption>
 										<h3>Michael Townsey</h3>
 										<a href="#">mariiita@gmail.com</a>
@@ -468,7 +473,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member4full.png" alt="member">
+									<img src="img/members/member4full.jpg" alt="member">
 									<figcaption>
 										<h3>Trevor Phillips</h3>
 										<a href="#">mariiita@gmail.com</a>
@@ -492,7 +497,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member5full.png" alt="member">
+									<img src="img/members/member5full.jpg" alt="member">
 									<figcaption>
 										<h3>Lisa Mons</h3>
 										<a href="#">mariiita@gmail.com</a>
@@ -516,7 +521,7 @@
 						<div class="col-md-12">
 							<div class="team__member--active__picture">	
 								<figure>
-									<img src="img/members/member6full.png" alt="member">
+									<img src="img/members/member6full.jpg" alt="member">
 									<figcaption>
 										<h3>Tony Stark</h3>
 										<a href="#">mariiita@gmail.com</a>
@@ -563,15 +568,6 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="faq--left">
-					<h3>Are you so desperate to fight?</h3>
-					<p>My name is Merely Ducard but I speak for Ra's al Ghul... a man greatly feared by the criminal underworld. A mon who can offer you a path. Someone like you is only here by choice. You have been exploring the criminal fraternity but whatever your original intentions you have to become truly lost. The path of a man who shares his hatred of evil and wishes to serve true justice. The path of the League of Shadows.</p>
-
-					<h3>Do you want my opinion?</h3>
-					<p>Now, our operation is small but there is a lot of potential for aggressive expansion. So which of you fine gentlemen would like to join our team? Oh. There's only one spot open right now, so we're gonna have... tryouts.</p>
-
-					<h3>Just you, sir?</h3>
-					<p>Don't worry, Master Wayne. It takes a little time to get back in the swing of things.</p>
-
 					<h3>Are you so desperate to fight?</h3>
 					<p>My name is Merely Ducard but I speak for Ra's al Ghul... a man greatly feared by the criminal underworld. A mon who can offer you a path. Someone like you is only here by choice. You have been exploring the criminal fraternity but whatever your original intentions you have to become truly lost. The path of a man who shares his hatred of evil and wishes to serve true justice. The path of the League of Shadows.</p>
 
@@ -631,12 +627,5 @@
 <!--Slick-->
 <script src="js/slick/slick.min.js"></script> 
 <script src="js/main.js"></script>
-
-
-<script>
-
-
-	
-</script>
 </body>
 </html>
